# Quadratic-Calculator

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/alfa/quadratic_calculator/: MainActivity.java
build_linux/appimage/Quadratic-Calculator.AppDir/: AppRun  Quadratic-Calculator.desktop
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cal.dart  help.dart  home.dart  main.dart  splash_screen.dart
lib/Quadcal/headers/: QuadCal.h  exception.h
lib/Quadcal/src/: CalApi.cpp  Quadcal.cpp  exception.cpp
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
